OAuth changes and test
