# CRUD_Ops/src/routes/country.js
@@ -3,15 +3,35 @@ const router = express.Router();
 
 const countryController = require('../controllers/country');
 const validation = require('../middleware/validation');
+const { isAuthenticated } = require('../middleware/authenticate');
 
+// Get all countries 
 router.get('/countries', countryController.getAllCountries);
 
+// Get one country 
 router.get('/countries/:id', countryController.getCountry);
 
-router.post('/countries', validation.saveCountry, countryController.createCountry);
+// Create new country
+router.post(
+  '/countries',
+  isAuthenticated,
+  validation.saveCountry,
+  countryController.createCountry
+);
 
-router.put('/countries/:id', validation.saveCountry, countryController.updateCountry);
+// Update existing country 
+router.put(
+  '/countries/:id',
+  isAuthenticated,
+  validation.saveCountry,
+  countryController.updateCountry
+);
 
-router.delete('/countries/:id', countryController.deleteCountry);
+// Delete a country 
+router.delete(
+  '/countries/:id',
+  isAuthenticated,
+  countryController.deleteCountry
+);
 
 module.exports = router;
